--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Conventers\EnumToColorConventer.cs" />
     <Compile Include="Conventers\NegativeBoolToVisibilityConventer.cs" />
     <Compile Include="Conventers\StringToImageConventer.cs" />
+    <Compile Include="Conventers\ViewModelBaseToVisibilityConventer.cs" />
     <Compile Include="Properties\Resources.pl-PL.Designer.cs">
       <DependentUpon>Resources.pl-PL.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -449,6 +450,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\Icons\Code-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\arr.png" />
+    <Resource Include="Assets\Images\arr2.png" />
+    <Resource Include="Assets\Images\notebook_statiscitcs.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
