--- a/RepositoryParser/RepositoryParser/packages.config
+++ b/RepositoryParser/RepositoryParser/packages.config
@@ -4,11 +4,14 @@
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net46" developmentDependency="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net46" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net46" />
   <package id="Fody" version="1.29.4" targetFramework="net46" developmentDependency="true" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net46" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.160" targetFramework="net46" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net46" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
+  <package id="NHibernate" version="4.0.0.4000" targetFramework="net46" />
   <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net46" />
   <package id="System.Data.SQLite.EF6" version="1.0.102.0" targetFramework="net46" />
