--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -679,6 +679,9 @@
   <ItemGroup>
     <Resource Include="Assets\Icons\Delete Filled-50.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\version_control.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
